# r4c-testcase

./: Makefile  pyproject.toml
R4C/: settings.py  urls.py
robots/: apps.py  forms.py  receivers.py  signals.py  tests.py  urls.py  views.py
